--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,11 @@ jobs:
     steps:
     # Запуск actions checkout — готового скрипта 
     # для клонирования репозитория
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - name: Set up Python
       # Запуск actions setup-python — готового скрипта 
       # для развёртывания окружения Python
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v2
       with:
         # Выбор версии Python
         python-version: 3.7
@@ -35,3 +35,27 @@ jobs:
         python -m flake8
         cd infra_project/
         python manage.py test
+
+  build_and_push_to_docker_hub:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        # Проверка доступности репозитория Docker Hub для workflow
+        uses: actions/checkout@v2 
+      - name: Set up Docker Buildx
+        # Вызов сборщика контейнеров docker
+        uses: docker/setup-buildx-action@v1 
+      - name: Login to Docker 
+        # Запуск скрипта авторизации на Docker Hub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        # Пуш образа в Docker Hub 
+        uses: docker/build-push-action@v2 
+        with:
+          push: true
+          tags: chuvashevalena/infra_actions:latest 
